fix spacing on non 1440p displays

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 150px;
+    gap: 90px;
     border-left: 40px solid #0A1D2E;
     /* margin: 40px; */
 }
